FIX: Avatar layout on small screens

--- a/app/assets/stylesheets/common/base/embed-mode.scss
+++ b/app/assets/stylesheets/common/base/embed-mode.scss
@@ -166,5 +166,7 @@ body.embed-mode {
     opacity: 0;
     height: 0;
     visibility: hidden;
+    position: absolute;
+    pointer-events: none;
   }
 }
